--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
+    "@tedconf/react-show-more": "^1.1.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
@@ -15,16 +16,19 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "fslightbox-react": "^1.4.9",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
-    "react-player": "^1.12.0",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.1.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-show-more-text": "^1.3.0",
+    "react-sizeme": "^2.6.12",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
     "recompose": "^0.30.0",
