--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
+REACT_APP_BUILDER_ID=%BUILDER_ID%
+REACT_APP_ARTIST_PUB_KEY=%ARTIST_PUB_KEY%
+REACT_APP_ENV=%ENV%
